# rustwiki

./: Cargo.toml  README.md
src/: main.rs
templates/: edit.html.tera  view.html.tera
