[package]
name = "rustwiki"
version = "0.1.0"
authors = ["Sergey Bugaev <bugaevc@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.1"

[dependencies.rocket_contrib]
version = "0.4.1"
default-features = false
features = ["tera_templates"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
